# docu-lite

./: .gitignore  README.md  TO_DO.md  _config.yml  adding to GitHub workflow.md  adding-to-GitHub-workflow.html  adding-to-GitHub-workflow.md  docu-lite-demo-outline.html  docu-lite-docmode.css  docu-lite-docmode.ini  docu-lite-docs.html  docu-lite-docs.ini  docu-lite-list.txt  docu-lite-outline-docmode.html  docu-lite-outline.html  docu-lite-outline_docs.html  docu-lite-style.css  docu-lite.ini  docu-lite.py  doculite.py  dummy.py  make_outline.py  make_outline_backup.py  make_outline_classed.py  outline.html  pyproject.toml  test.py
.github/workflows/: static.yml  update_overviews.yml
backup/: docu-lite-demo-outline.html  docu-lite-style.css  docu-lite.py  doculite.py
test/: docu-lite-necbol-outline-docmode.html  docu-lite-necbol-outline.html  docu-lite-outline-docmode.html  necbol docs.bat  self docs.bat
test/docu-lite/: docu-lite-docmode.css  docu-lite-docmode.ini  docu-lite-outline-docmode.html  docu-lite-outline.html  docu-lite.ini  self docs.bat  self full.bat
test/necbol/: docu-lite-necbol-docmode.ini  docu-lite-necbol-outline-docmode.html  docu-lite-necbol-outline.html  docu-lite-necbol.ini  necbol docs.bat  necbol full.bat
test/test/: docu-lite-outline-docmode.html  docu-lite-outline.html  docu-lite-style.css  docu-lite.ini  test docs.bat  test.py
workflows/: update_overviews.yml
