[project]
name = "docu-lite"
version = "0.2.0"
license = "MIT"

authors = [
  { name="G1OJS", email="g1ojs@yahoo.com" },
]
description = """🧾 docu-lite: Zero-dependency HTML doc viewer for Python.
Browse classes and functions with collapsible docstrings in a tidy, readable format."""
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities"
]

keywords = [
    "documentation",
    "docstring",
    "python",
    "html",
    "code-outline",
    "doc-generator",
    "lightweight",
    "static",
    "cli",
    "developer-tools"
]

[project.urls]
Homepage = "https://github.com/G1OJS/docu-lite"
Issues = "https://github.com/G1OJS/docu-lite/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["docu-lite"]
